--- a/src/package.json
+++ b/src/package.json
@@ -5,5 +5,7 @@
     "react-scripts": "^4.0.0"
   },
   "main": "/index.js",
-  "devDependencies": {}
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
+  }
 }
