--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^9.1.2"
   },
   "main": "/index.js",
   "devDependencies": {
     "react-scripts": "^5.0.1"
   },
-  "name": "wjwuw8",
-  "description": null,
+  "name": "minimalistic-tic-tac-toe-game",
+  "description": "This is a minimalistic tic-tac-toe game built with React",
   "version": "0.0.0",
   "scripts": {
     "start": "react-scripts start",
