add back to last move button

--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
   },
   "main": "/index.js",
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "react-scripts": "^5.0.1"
   },
   "name": "minimalistic-tic-tac-toe-game",
   "description": "This is a minimalistic tic-tac-toe game built with React",
   "version": "0.0.0",
+  "homepage": "https://FrancisBernard34.github.io/tic-tac-toe-game",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
