--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "main": "/index.js",
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
     "gh-pages": "^6.2.0",
+    "jest": "^27.5.1",
     "react-scripts": "^5.0.1"
   },
   "name": "minimalistic-tic-tac-toe-game",
