--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "@reduxjs/toolkit": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "sass": "^1.80.7"
   },
   "main": "/index.js",
   "devDependencies": {
