--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
+    "babel-jest": "^29.7.0",
     "gh-pages": "^6.2.0",
     "jest": "^27.5.1",
     "react-scripts": "^5.0.1"
